config work, refactoring