@@ -1,1 +1,12 @@
 # Fibonacci Server
+
+1. brew install scala
+2. brew install activator
+
+
+1. application secret
+
+export JAVA_OPTS="-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xss2M"
+
+run -Dconfig.file=/Users/vbeffa/projects/fibsrv/conf/application-dev.conf
+
